--- a/BankrotMenadzer/BankrotMenadzer/Master1.Master
+++ b/BankrotMenadzer/BankrotMenadzer/Master1.Master
@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
     <title>Банкрот менаџер</title>
-    <link href="content/css/bootstrap.css" rel="stylesheet" type="text/css" />
+    <link href="content/bootstrap-3.3.4/css/bootstrap.css" rel="stylesheet" type="text/css" />
     <link href="content/css/jquery-ui-1.10.4.css" rel="stylesheet" type="text/css" />
     <style>
         .container {
@@ -34,7 +34,7 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-default navbar-fixed-top" style="border-bottom-color: darkgreen;" role="navigation">
+    <nav class="navbar navbar-inverse" role="navigation">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
                 <span class="icon-bar"></span>
@@ -45,16 +45,38 @@
         </div>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
-                <li id="liHome" runat="server"><a href="Default.aspx" id="Home">Почетна</a></li>
-                <li id="liHistory" runat="server"><a href="History.aspx" id="History">Историја</a></li>
+                <li id="liHome" runat="server">                     
+                    <a href="Default.aspx" id="Home">
+                        <span class="glyphicon glyphicon-home"></span> 
+                        <label class="label">Homepage</label>                        
+                    </a>
+                </li>
+                <li id="liHistory" runat="server">
+                    <a href="History.aspx" id="History">
+                        <span class="glyphicon glyphicon-stats"></span> 
+                        <label class="label">Stats</label>
+                    </a>
+                </li>
+                <li id="liWishlist" runat="server">
+                    <a href="Wishlist.aspx" id="Wishlist">
+                        <span class="glyphicon glyphicon-heart"></span> 
+                        <label class="label">Wishlist</label>
+                    </a>
+                </li>
             </ul>
             <ul class="nav navbar-nav navbar-right" style="padding-right: 30px;">
                 <li id="liKorisnik" runat="server" style="border-right-color: red;">
-                    <a href="Korisnik.aspx" id="Korisnik">
-                        <asp:Label ID="lblUser" runat="server" Text=""></asp:Label></a>
+                    <a href="Korisnik.aspx" id="Korisnik"> 
+                        <span class="glyphicon glyphicon-user"></span>                       
+                        <asp:Label ID="lblUser" runat="server" Text="" class="label"></asp:Label>                        
+                    </a>                    
                 </li>
-                <p class="navbar-text" style="color: green; height: 10px;">|</p>
-                <li><a href="Logout.aspx" id="btnLogout">Одјави се</a></li>
+                <li>
+                    <a href="Logout.aspx" id="btnLogout">
+                        <span class="glyphicon glyphicon-log-out"></span> 
+                        <label class="label">Logout</label>
+                    </a>
+                </li>
             </ul>
         </div>
     </nav>
