master page done

--- a/BankrotMenadzer/BankrotMenadzer/Master1.Master
+++ b/BankrotMenadzer/BankrotMenadzer/Master1.Master
@@ -7,32 +7,9 @@
     <title>Банкрот менаџер</title>
     <link href="content/bootstrap-3.3.4/css/bootstrap.css" rel="stylesheet" type="text/css" />
     <link href="content/css/jquery-ui-1.10.4.css" rel="stylesheet" type="text/css" />
-    <style>
-        .container {
-            min-height: 580px;
-            border-left: 1px solid #929292;
-            border-right: 1px solid #929292;
-            border-bottom: 0px;
-        }
-
-
-        body {
-            background-color: #fcfcfc;
-        }
-
-        #footer {
-            border-top-color: #c7c7c7;
-            border-left: 1px solid #929292;
-            border-right: 1px solid #929292;
-            min-height: 10px;
-            border-radius: 0px;
-            padding: 0px;
-            margin: auto;
-            width: 1000px;
-            color: #343233;
-        }
-    </style>
 </head>
+    <script>
+    </script>
 <body>
     <nav class="navbar navbar-inverse" role="navigation">
         <div class="navbar-header">
@@ -59,7 +36,7 @@
                 </li>
                 <li id="liWishlist" runat="server">
                     <a href="Wishlist.aspx" id="Wishlist">
-                        <span class="glyphicon glyphicon-heart"></span> 
+                        <span class="glyphicon glyphicon-piggy-bank"></span> 
                         <label class="label">Wishlist</label>
                     </a>
                 </li>
@@ -68,7 +45,7 @@
                 <li id="liKorisnik" runat="server" style="border-right-color: red;">
                     <a href="Korisnik.aspx" id="Korisnik"> 
                         <span class="glyphicon glyphicon-user"></span>                       
-                        <asp:Label ID="lblUser" runat="server" Text="" class="label"></asp:Label>                        
+                        <asp:Label ID="lblUser" runat="server" Text=""></asp:Label>                        
                     </a>                    
                 </li>
                 <li>
@@ -84,12 +61,13 @@
     <script src="Scripts/bootstrap.min.js"></script>
     <script src="Scripts/jquery-ui-1.10.4.js"></script>
 
-    <div class="container" style="margin-top: 50px; padding-top: 10px; width: 1000px; background-color: white;">
+    <div class="container" style="margin-top: 50px; padding-top: 10px; width: 1000px; background-color: white;">            
         <asp:ContentPlaceHolder ID="ContentplaceHolder1" runat="server">
         </asp:ContentPlaceHolder>
+    </div>        
     </div>
-    <div id="footer" class="navbar navbar-default">
-        <p style="text-align: center; vertical-align: central; padding-top: 5px">Банкрот менаџер © 2015. Сите права се задржани.</p>
+    <div id="footer" class="navbar navbar-default navbar-default">
+        <p style="text-align: center; vertical-align: central; padding-top: 5px">Bankrupt Manager © 2015. All rights reserved.</p>
     </div>
 
 </body>
