--- a/BankrotMenadzer/BankrotMenadzer/Master1.Master
+++ b/BankrotMenadzer/BankrotMenadzer/Master1.Master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Master1.master.cs" Inherits="CrvenKrst.Master1" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Master1.master.cs" Inherits="BankrotManager.Master1" %>
 
 <!DOCTYPE html>
 
