--- a/BankrotMenadzer/BankrotMenadzer/Master1.Master
+++ b/BankrotMenadzer/BankrotMenadzer/Master1.Master
@@ -19,7 +19,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <img src="Content/image/logo1.png" style="padding-left: 5px; padding-right: 3px;" />
+            <a class="navbar-brand">Bankrupt Manager</a>
+            <span class="navbar-brand glyphicon glyphicon-piggy-bank"></span>
         </div>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
