--- a/BankrotMenadzer/BankrotMenadzer/Content/bootstrap-3.3.4/css/bootstrap-theme.css
+++ b/BankrotMenadzer/BankrotMenadzer/Content/bootstrap-3.3.4/css/bootstrap-theme.css
@@ -4,6 +4,10 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 
+.cursor-default {
+    cursor: default
+}
+
 .btn-default,
 .btn-primary,
 .btn-success,
