--- a/BankrotMenadzer/BankrotMenadzer/Content/bootstrap-3.3.4/css/bootstrap.css
+++ b/BankrotMenadzer/BankrotMenadzer/Content/bootstrap-3.3.4/css/bootstrap.css
@@ -4,6 +4,10 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 
+.cursor-default {
+    cursor: default
+}
+
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 html {
   font-family: sans-serif;
