--- a/BankrotMenadzer/BankrotMenadzer/Master1.Master
+++ b/BankrotMenadzer/BankrotMenadzer/Master1.Master
@@ -8,66 +8,82 @@
     <link href="content/bootstrap-3.3.4/css/bootstrap.css" rel="stylesheet" type="text/css" />
     <link href="content/css/jquery-ui-1.10.4.css" rel="stylesheet" type="text/css" />
 </head>
-    <script>
-    </script>
+<script>
+</script>
 <body>
     <nav class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand">Bankrupt Manager</a>
-            <span class="navbar-brand glyphicon glyphicon-piggy-bank"></span>
-        </div>
-        <div class="navbar-collapse collapse navbar-responsive-collapse">
-            <ul class="nav navbar-nav">
-                <li id="liHome" runat="server">
-                    <a href="Default.aspx" id="Home">
-                        <span class="glyphicon glyphicon-home"></span> 
-                        Overview
-                    </a>
-                </li>
-                <li id="liHistory" runat="server">
-                    <a href="History.aspx" id="History">
-                        <span class="glyphicon glyphicon-stats"></span> 
-                        Stats
-                    </a>
-                </li>
-                <li id="liWishlist" runat="server">
-                    <a href="Wishlist.aspx" id="Wishlist">
-                        <span class="glyphicon glyphicon-piggy-bank"></span> 
-                        Wishlist
-                    </a>
-                </li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right" style="padding-right: 30px;">
-                <li id="liKorisnik" style="border-right-color: red;" runat="server">
-                    <a href="Korisnik.aspx" id="Korisnik"> 
-                        <span class="glyphicon glyphicon-user"></span>                       
-                        <asp:Label ID="lblUser" runat="server" Text=""></asp:Label>                        
-                    </a>                    
-                </li>
-                <li>
-                    <a href="Logout.aspx" id="btnLogout">
-                        <span class="glyphicon glyphicon-log-out"></span> 
-                        Log Out
-                    </a>
-                </li>
-            </ul>
-        </div>
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand">Bankrupt Manager</a>
+                <span class="navbar-brand glyphicon glyphicon-piggy-bank"></span>
+            </div>
+            <div class="navbar-collapse collapse navbar-responsive-collapse">
+                <ul class="nav navbar-nav">
+                    <li id="liHome" runat="server">
+                        <a href="Default.aspx" id="Home">
+                            <span class="glyphicon glyphicon-home"></span>
+                            Overview
+                        </a>
+                    </li>
+                    <li id="liHistory" runat="server">
+                        <a href="History.aspx" id="History">
+                            <span class="glyphicon glyphicon-stats"></span>
+                            Stats
+                        </a>
+                    </li>
+                    <li id="liWishlist" runat="server">
+                        <a href="Wishlist.aspx" id="Wishlist">
+                            <span class="glyphicon glyphicon-piggy-bank"></span>
+                            Wishlist
+                        </a>
+                    </li>
+                    <!-- funds -->
+                    <li id="liFunds">
+                        <a href="#" class="cursor-default">
+                            <span class="glyphicon glyphicon-euro cursor-default"></span>
+                            <asp:Label ID="lbl_funds" runat="server" Text="Funds: 0"></asp:Label>
+                        </a>
+                    </li>
+                    
+                    <li id="liSavedFunds" >
+                        <a href="#" class="cursor-default">
+                            <span class="glyphicon glyphicon-euro"></span>
+                            <asp:Label ID="lbl_saved_funds" runat="server" Text="Saved funds: 0"></asp:Label>
+                        </a>
+                    </li>
+                    <!-- end funds -->
+                </ul>
+                <ul class="nav navbar-nav navbar-right" style="padding-right: 30px;">
+                    <li id="liKorisnik" style="border-right-color: red;" runat="server">
+                        <a href="#" id="Korisnik" class="cursor-default">
+                            <span class="glyphicon glyphicon-user"></span>
+                            <asp:Label ID="lblUser" runat="server" Text=""></asp:Label>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="Logout.aspx" id="btnLogout">
+                            <span class="glyphicon glyphicon-log-out"></span>
+                            Log Out
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
     <script src="Scripts/jquery-2.1.0.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
     <script src="Scripts/jquery-ui-1.10.4.js"></script>
+    <script src="Scripts/Page JS/master.js"></script>
 
-    <div class="container" style="margin-top: 50px; padding-top: 10px; width: 1000px; background-color: white;">            
+    <div class="container" style="margin-top: 50px; padding-top: 10px; width: 1000px; background-color: white;">
         <asp:ContentPlaceHolder ID="ContentplaceHolder1" runat="server">
         </asp:ContentPlaceHolder>
-    </div>        
+    </div>
     </div>
     <div id="footer" class="navbar navbar-default navbar-default">
         <p style="text-align: center; vertical-align: central; padding-top: 5px">Bankrupt Manager © 2015. All rights reserved.</p>
