Wishlist buying/removing

--- a/BankrotMenadzer/BankrotMenadzer/Content/bootstrap-3.3.4/css/bootstrap.css
+++ b/BankrotMenadzer/BankrotMenadzer/Content/bootstrap-3.3.4/css/bootstrap.css
@@ -1073,6 +1073,11 @@ th {
 .glyphicon-menu-up:before {
   content: "\e260";
 }
+
+.error {
+    background-color: #fa8072;
+}
+
 * {
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
