--- a/BankrotMenadzer/BankrotMenadzer/Master1.Master
+++ b/BankrotMenadzer/BankrotMenadzer/Master1.Master
@@ -8,10 +8,21 @@
     <link href="content/bootstrap-3.3.4/css/bootstrap.css" rel="stylesheet" type="text/css" />
     <link href="content/css/jquery-ui-1.10.4.css" rel="stylesheet" type="text/css" />
 </head>
-<script>
-</script>
+<style>
+    html,
+    body {
+	    margin:0;
+	    padding:0;
+	    height:100%;
+    }
+    #footer {
+        width:100%;
+        bottom:0;
+        left:0;
+    }
+</style>
 <body>
-    <nav class="navbar navbar-default" role="navigation">
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
@@ -80,14 +91,14 @@
     <script src="Scripts/jquery-ui-1.10.4.js"></script> 
     <script src="Scripts/Page JS/master.js"></script>
 
-    <div class="container-fluid" style=" background-color: white;">
-    <div class="row">
-        <div class="col-xs-12 col-md-12 col-lg-10 col-lg-offset-1">
-        <asp:ContentPlaceHolder ID="ContentplaceHolder1" runat="server">
-        </asp:ContentPlaceHolder>
+    <div class="container-fluid" style=" background-color: white; min-height:100%;	position:relative">
+        <div class="row">
+            <div class="col-xs-12 col-md-12 col-lg-10 col-lg-offset-1">
+                <asp:ContentPlaceHolder ID="ContentplaceHolder1" runat="server">
+                </asp:ContentPlaceHolder>
+            </div>
+        </div>
     </div>
-        </div>
-        </div>
     <div id="footer" class="navbar navbar-default navbar-default">
         <p style="text-align: center; vertical-align: central; padding-top: 5px">Bankrupt Manager © 2015. All rights reserved.</p>
     </div>
