--- a/BankrotMenadzer/BankrotMenadzer/Master1.Master
+++ b/BankrotMenadzer/BankrotMenadzer/Master1.Master
@@ -92,6 +92,7 @@
     <script src="Scripts/Page JS/master.js"></script>
 
     <div class="container-fluid" style=" background-color: white; min-height:100%;	position:relative">
+        <div style="height:60px;"></div>
         <div class="row">
             <div class="col-xs-12 col-md-12 col-lg-10 col-lg-offset-1">
                 <asp:ContentPlaceHolder ID="ContentplaceHolder1" runat="server">
